--- a/bower.json
+++ b/bower.json
@@ -11,11 +11,12 @@
     "angular-resource": ">=1.2.*",
     "angular-cookies": ">=1.2.*",
     "angular-sanitize": ">=1.2.*",
-    "angular-route": ">=1.2.*",
     "angular-bootstrap": "~0.11.0",
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
-    "ng-tags-input": "~2.1.1"
+    "ng-tags-input": "~2.1.1",
+    "angular-route": "~1.2.23",
+    "toastr": "~2.0.3"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
